# gerrit-mcp-server

./: MANIFEST.in  README.md  README_zh.md  pyproject.toml  uv-requirements.txt
gerrit_mcp_server/: __init__.py  gerrit_auth.py  gerrit_command_argument_defs.json  main.py
tests/integration/: test_main.py
tests/unit/: test_gerrit_auth.py  test_main.py  test_post_review_comment.py
